# lrc_rs

./: Cargo.toml  LICENSE  README.md  deny.toml  justfile
.github/workflows/: ci.yml  pages.yml  publish.yml
assets/: example-expected-serialized.lrc  example-w-out-sync.txt  example-w-whitespace.lrc  example.lrc  wrong-id-tags-positioning.lrc
src/: lib.rs  tests.rs
src/parser/: mod.rs  tests.rs
