[package]
name = "lrc_rs"
version = "0.1.3"
edition = "2024"
authors = [ "tpaau <tpaau-17db@tutamail.com>" ]
description = "Robust crate for working with synced lyrics content in the LRC format with support for the A2 extension"
license = "MIT"
repository = "https://github.com/tpaau/lrc_rs"
categories = ["encoding", "parser-implementations"]
keywords = ["parser", "lyrics", "serialization", "time", "music"]
readme = "README.md"
documentation = "https://tpaau.github.io/lrc_rs/lrc_rs/"
homepage = "https://github.com/tpaau/lrc_rs"

[dependencies]
log = { version = "0.4.33", optional = true }
nom = { version = "8.0.0", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[features]
default = [ "parser", "log" ]
parser = [ "dep:nom" ]
log = [ "dep:log" ]
serde = [ "dep:serde" ]
